--- a/HTML/appreciation.html
+++ b/HTML/appreciation.html
@@ -1,99 +1,93 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Images/image.ico">
-    <link rel="stylesheet" href="../CSS/authors.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>About the authors</title>
-  </head>
-  <body>
-    <header>
-      <a href=""><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
-      <a><img class="mngt-logo" src="../Images/Logo_MNGT.png"></a>
-      <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
-    </header>
-    <nav>
-      <a href=""> <img class="poly-q" src="../Images/logo-plyq.png"> </a>
-      <ul>
-        <li><a href="../index.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Landing Page </a></li>
-        <li><a href="../index.html" class="return-little"><i class="fa-solid fa-house"></i> Landing Page </a></li>
-        <li><a href="home.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Home page </a></li>
-        <li><a href="home.html" class="return-little"><i class="fa-solid fa-house"></i> Home </a></li>
-      </ul>
-    </nav>
-    <div class="wrapper">
-      <h1> Authors Page</h1>
-      <div class="team">
-        <div class="team_members">
-          <div class="team_img">
-            <img src="" alt="team_member_image">
-          </div>
-          <h3> Bernardo Estevam</h3>
-          <p class="role"> Student</p>
-          <p class="info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit illo quibusdam veritatis temporibus consectetur fuga laudantium facilis autem mollitia dolor provident, possimus iste amet sequi.</p>
-          <ul>
-            <a href=""><li><i class="fab fa-facebook"></i></li> </a>
-            <a href=""><li><i class="fab fa-twitter"></i></li> </a>
-            <a href=""><li><i class="fab fa-linkedin"></i></li> </a>
-          </ul>
-        </div>
-        <div class="team_members">
-          <div class="team_img">
-            <img src="../Images/clevio.png" alt="team_member_image">
-          </div>
-          <h3> Clévio Nóbrega</h3>
-          <p class="role"> Mentor </p>
-          <p class="info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat debitis numquam expedita! Reprehenderit nostrum suscipit corporis, sunt voluptates maxime nulla incidunt, ut quo, eius quae.</p>
-          <ul>
-            <a href=""><li><i class="fab fa-facebook"></i></li> </a>
-            <a href=""><li><i class="fab fa-twitter"></i></li> </a>
-            <a href=""><li><i class="fab fa-linkedin"></i></li> </a>
-          </ul>
-        </div>
-        <div class="team_members">
-          <div class="team_img">
-            <img src="../Images/carlos.png" alt="team_member_image">
-          </div>
-          <h3> Carlos Matos</h3>
-          <p class="role"> Co-Mentor</p>
-          <p class="info"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum hic excepturi soluta, quam doloribus sequi corporis. Dolor temporibus ad iusto ipsam tempora, eius, ut dolorum.</p>
-          <ul>
-            <a href=""><li><i class="fab fa-facebook"></i></li> </a>
-            <a href=""><li><i class="fab fa-twitter"></i></li> </a>
-            <a href=""><li><i class="fab fa-linkedin"></i></li> </a>
-          </ul>
-        </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="../Images/image.ico">
+  <link rel="stylesheet" href="../CSS/appr.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+  <title>PolyQ - Appreciation</title>
+</head>
+<body>
+  <header>
+    <a href=""><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
+    <a><img class="mngt-logo" src="../Images/Logo_MNGT.png"></a>
+    <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
+  </header>
+  <nav>
+    <a href=""> <img class="poly-q" src="../Images/logo-plyq.png"> </a>
+    <ul>
+      <li><a href="../index.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Landing Page </a></li>
+      <li><a href="../index.html" class="return-little"><i class="fa-solid fa-house"></i> Landing Page </a></li>
+      <li><a href="home.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Home page </a></li>
+      <li><a href="home.html" class="return-little"><i class="fa-solid fa-house"></i> Home </a></li>
+    </ul>
+  </nav>
+  <main>
+    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
+      <a href="https://biorender.com/"><img src="../Images/biorender-logo.png"></a>
+      <div class="center">
+          <p>Thank you to BioRender for the tools to create some of our images.</p>
       </div>
     </div>
-    <footer>
-      <div class="collumns">
-        <div class="first-third">
-          <ul>
-            <li><a href="">Contact</a></li>
-            <li><a href="">ABC - RI</a></li>
-            <li><a href="">MNGT</a></li>
-            <li><a href="">News</a></li>
-          </ul>
-        </div>
-        <div class="second-third">
-          <ul>
-            <li><a href="">Landing Page</a></li>
-            <li><a href="">Sources</a></li>
-            <li><a href="">UALG</a></li>
-            <li><a href="">Masters</a></li>
-          </ul>
-        </div>
-        <div class="third-third">
-          <ul>
-            <li><a href="">Help</a></li>
-            <li><a href="">Affiliations</a></li>
-              <li><a href="">Appreciation</a></li>
-          </ul>
-        </div>
+    <div class="appr" data-aos="fade-up" data-aos-offset="600" data-aos-duration="800">
+      <a href="https://www.mapchart.net/"><img src="../Images/mapchart-logo.png"></a>
+      <div class="center">
+          <p>Thank you to MapChart for the amazing tool that helped create our epidemiologic maps for each disease.</p>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="200.000000pt" height="200.000000pt" viewBox="0 0 200.000000 200.000000" preserveAspectRatio="xMidYMid meet">
+    </div>
+    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
+      <div class="flex-vert">
+        <a href="https://pubmed.ncbi.nlm.nih.gov/"><img class="image" src="../Images/pubmed-logo.png"></a>
+        <a class="ref-space" href="https://www.sciencedirect.com/"><img class="image-1" src="../Images/ScienceDirect-logo.jpg"></a>
+        <a class="ref-space-1" href="https://www.researchgate.net/"><img class="image-2" src="../Images/research-logo.png"></a>
+      </div>
+      <div class="center">
+          <p>Thank you for the information across various academic research databases.</p>
+      </div>
+    </div>
+    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
+      <a class="ref-long" href="https://genome.ucsc.edu/"><img class="image-long" src="../Images/genome-logo.png"></a>
+      <div class="center">
+          <p>Thank you to genomebrowser for various information including gene location.</p>
+      </div>
+    </div>
+    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
+      <a href="https://www.uniprot.org/"><img class="image-long" src="../Images/uniprot-logo.jpg"></a>
+      <div class="center">
+          <p>Thank you to UniProt for detailed protein information.</p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="collumns">
+      <div class="first-third">
+        <ul>
+          <li><a href="">Contact</a></li>
+          <li><a href="">ABC - RI</a></li>
+          <li><a href="">MNGT</a></li>
+          <li><a href="">News</a></li>
+        </ul>
+      </div>
+      <div class="second-third">
+        <ul>
+          <li><a href="">Landing Page</a></li>
+          <li><a href="">Sources</a></li>
+          <li><a href="">UALG</a></li>
+          <li><a href="">Masters</a></li>
+        </ul>
+      </div>
+      <div class="third-third">
+        <ul>
+          <li><a href="">Help</a></li>
+          <li><a href="">Affiliations</a></li>
+            <li><a href="">CHANGED</a></li>
+        </ul>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="200.000000pt" height="200.000000pt" viewBox="0 0 200.000000 200.000000" preserveAspectRatio="xMidYMid meet">
 <metadata>
 Created by potrace 1.10, written by Peter Selinger 2001-2011
 </metadata>
@@ -115,12 +109,17 @@ Created by potrace 1.10, written by Peter Selinger 2001-2011
 <path d="M1362 588 c-7 -7 -12 -36 -12 -65 0 -57 17 -76 48 -56 22 13 27 33 8 33 -9 0 -16 -4 -16 -10 0 -5 -4 -10 -10 -10 -5 0 -10 9 -10 20 0 15 7 20 25 20 21 0 25 5 25 28 0 29 -16 52 -35 52 -6 0 -16 -5 -23 -12z m38 -40 c0 -5 -7 -8 -15 -8 -15 0 -20 21 -8 33 7 7 23 -11 23 -25z"/>
 </g>
 </svg>
-      <p> &copyPolyQ Database. All rights reserved 2021-2022. Authors mentioned and database creators all accounted for.</p>
-      <div class="logos">
-        <a class="logo-one" href=""> <img src="../Images/Logo_ABCRI.png" alt=""></a>
-        <a class="logo-two" href=""> <img src="../Images/Logo_MNGT.png" alt=""></a>
-        <a class="logo-three" href=""> <img src="../Images/fmcb-mod.png" alt=""></a>
-      </div>
-    </footer>
-  </body>
+    <p> &copyPolyQ Database. All rights reserved 2021-2022. Authors mentioned and database creators all accounted for.</p>
+    <div class="logos">
+      <a class="logo-one" href=""> <img src="../Images/Logo_ABCRI.png" alt=""></a>
+      <a class="logo-two" href=""> <img src="../Images/Logo_MNGT.png" alt=""></a>
+      <a class="logo-three" href=""> <img src="../Images/fmcb-mod.png" alt=""></a>
+    </div>
+  </footer>
+</body>
+<script src="../Scripts/jquery-3.6.0.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ <script>
+   AOS.init();
+ </script>
 </html>
