--- a/HTML/objective.html
+++ b/HTML/objective.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="../Images/image.ico">
   <link rel="stylesheet" href="../CSS/objective.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>Objectives</title>
+  <title>PolyQ - Objectives</title>
 </head>
 <body>
   <header>
@@ -17,9 +17,12 @@
   </header>
   <nav>
     <a href=""> <img class="poly-q" src="../Images/logo-plyq.png"> </a>
-      <h1> Objectives</h1>
-      <a href="home.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Home page </a>
-      <a href="home.html" class="return-little"><i class="fa-solid fa-house"></i> Home </a>
+    <ul>
+      <li><a href="../index.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Landing Page </a></li>
+      <li><a href="../index.html" class="return-little"><i class="fa-solid fa-house"></i> Landing Page </a></li>
+      <li><a href="home.html" class="return-button"><i class="fa-solid fa-house"></i> Return to Home page </a></li>
+      <li><a href="home.html" class="return-little"><i class="fa-solid fa-house"></i> Home </a></li>
+    </ul>
   </nav>
   <section>
       <h2 class="title"> The objectives of PolyQ Database </h2>
