--- a/home/index.html
+++ b/home/index.html
@@ -129,7 +129,7 @@
           <h2>Use search bar or click directly on your disease of interest</h2>
 
           <div class="slider-container" id="slider-horizontal">
-            <div class="my_item" onclick="window.location='Diseases/Huntington.html';">
+            <div class="my_item" onclick="window.location='../diseases/hd';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -145,7 +145,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/DRPLA.html';">
+            <div class="my_item" onclick="window.location='../diseases/drpla';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -161,7 +161,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SBMA.html';">
+            <div class="my_item" onclick="window.location='../diseases/sbma';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -177,7 +177,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA1.html';">
+            <div class="my_item" onclick="window.location='../diseases/sca1';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -193,7 +193,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA2.html';">
+            <div class="my_item" onclick="window.location='..diseases/sca2';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -209,7 +209,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA3.html';">
+            <div class="my_item" onclick="window.location='../diseases/sca3';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -225,7 +225,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA6.html';">
+            <div class="my_item" onclick="window.location='../diseases/sca6';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -241,7 +241,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA7';">
+            <div class="my_item" onclick="window.location='../diseases/sca7';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
@@ -257,7 +257,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='Diseases/SCA17.html';">
+            <div class="my_item" onclick="window.location='../diseases/sca17';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
