--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
               <li><a href="home">Home</a></li>
               <li><a href="contact">Contact</a></li>
               <li><a href="authors">Authors</a></li>
-              <li><a href="objectives">Objectives</a></li>
+              <li><a href="objective">Objectives</a></li>
             </ul>
             <ul class="list-2">
               <li>Search for information on 9 different polyglutamine diseases</li>
