--- a/home/index.html
+++ b/home/index.html
@@ -193,7 +193,7 @@
               </div>
               </div>
             </div>
-            <div class="my_item" onclick="window.location='..diseases/sca2';">
+            <div class="my_item" onclick="window.location='../diseases/sca2';">
               <div class="card-container">
               <div class="front-face">
                 <img src="../Images/biology-dna.jpg" />
