--- a/not-found-page.html
+++ b/not-found-page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>404 - Page Not found</title>
     <link rel="shortcut icon" href="Images/image1.ico"/>
-    <link rel="stylesheet" href="style_404.css"/>
+    <link rel="stylesheet" href="style_not_found.css"/>
   </head>
     <body>
       <header>
