--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>404 - Page Not found</title>
-    <link rel="shortcut icon" href="Images/image1.ico"/>
+    <link rel="shortcut icon" href="image1.ico"/>
     <link rel="stylesheet" href="style_not_found.css"/>
   </head>
     <body>
