--- a/diseases/hd/index.html
+++ b/diseases/hd/index.html
@@ -59,7 +59,7 @@
       <div id="indicator"></div>
     </div>
     <div class="text">
-    <h1><a href="Huntington.html"><i class="fa-solid fa-caret-right"></i>&nbspHuntington's Disease&nbsp<i class="fa-solid fa-caret-left"></i></a></h1>
+    <h1><a href="./"><i class="fa-solid fa-caret-right"></i>&nbspHuntington's Disease&nbsp<i class="fa-solid fa-caret-left"></i></a></h1>
     <section class="scrollspy" spy-title="Introduction">
       <div class="intro-section">
         <h2> Introduction </h2>
