--- a/diseases/sca2/index.html
+++ b/diseases/sca2/index.html
@@ -59,7 +59,7 @@
       <div id="indicator"></div>
     </div>
     <div class="text">
-    <h1><a href="SCA2.html"><i class="fa-solid fa-caret-right"></i> &nbspSpinocerebellar Ataxia 2</a></h1>
+    <h1><a href="./"><i class="fa-solid fa-caret-right"></i> &nbspSpinocerebellar Ataxia 2</a></h1>
     <section class="scrollspy" spy-title="Introduction">
       <div class="intro-section">
         <h2> Introduction </h2>
