--- a/diseases/drpla/index.html
+++ b/diseases/drpla/index.html
@@ -7,14 +7,14 @@
   <title>PolyQ - DRPLA</title>
   <link rel="shortcut icon" href="../../Images/image1.ico">
   <link rel="stylesheet" href="style_1.css">
-  <link rel="stylesheet" href="highlight-js/highlightjs.css">
+  <link rel="stylesheet" href="./highlight-js/highlightjs.css">
   <link rel="stylesheet" href="ScrollSpy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="int-image.css">
 </head>
 <body>
   <script src="ScrollSpy.min.js"></script>
-  <script src="highlight-js/highlight.pack.js"></script>
+  <script src="./highlight-js/highlight.pack.js"></script>
     <header>
       <a href=""><img class="abcri-logo" src="../../Images/Logo_ABCRI.png"></a>
       <a><img class="mngt-logo" src="../../Images/Logo_MNGT.png"></a>
