--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>404 - Page Not found</title>
-    <link rel="shortcut icon" href="image1.ico"/>
-    <link rel="stylesheet" href="style_not_found.css"/>
+    <link rel="shortcut icon" href="/Images/image1.ico"/>
+    <link rel="stylesheet" href="/style_not_found.css"/>
   </head>
     <body>
       <header>
-        <a href=""><img class="abcri-logo" src="Logo_ABCRI.png"></a>
-        <a><img class="mngt-logo" src="Logo_MNGT.png"></a>
+        <a href=""><img class="abcri-logo" src="/Images/Logo_ABCRI.png"></a>
+        <a><img class="mngt-logo" src="/Images/Logo_MNGT.png"></a>
         <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
       </header>
       <main>
@@ -24,7 +24,7 @@
               If you got to this page by clicking a link, please notify us.
             </p>
             <div class="poly-q-logo">
-              <img src="logo-plyq.png">
+              <img src="/Images/logo-plyq.png">
             </div>
             <div class="container-list">
             <div class="info-lists">
