--- a/404.html
+++ b/404.html
@@ -18,10 +18,10 @@
         <div class="info">
             <h1>404 Page Not Found</h1>
             <p>
-              The page you were looking for does not exist! Click <a href="home">here</a> to return to the home page.
+              The page you were looking for does not exist! Click <a href="/home">here</a> to return to the home page.
             </p>
             <p>
-              If you got to this page by clicking a link, please notify us.
+              If you got to this page by clicking a link, please <a href="/contact">notify us.</a>
             </p>
             <div class="poly-q-logo">
               <img src="/Images/logo-plyq.png">
@@ -29,10 +29,10 @@
             <div class="container-list">
             <div class="info-lists">
             <ul class="list-1">
-              <li><a href="home">Home</a></li>
-              <li><a href="contact">Contact</a></li>
-              <li><a href="authors">Authors</a></li>
-              <li><a href="objectives">Objectives</a></li>
+              <li><a href="/home">Home</a></li>
+              <li><a href="/contact">Contact</a></li>
+              <li><a href="/authors">Authors</a></li>
+              <li><a href="/objectives">Objectives</a></li>
             </ul>
             <ul class="list-2">
               <li>Search for information on 9 different polyglutamine diseases</li>
