--- a/contact/index.html
+++ b/contact/index.html
@@ -56,7 +56,7 @@
     <div class="collumns">
       <div class="first-third">
         <ul>
-          <li><a href="">Landing Page</a></li>
+          <li><a href="">Home</a></li>
           <li><a href="">ABC - RI</a></li>
           <li><a href="">MNGT</a></li>
           <li><a href="">News</a></li>
