--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <i class="fas fa-window-close" onclick="hideMenu()"> </i>
             <ul>
               <li><a href="/home">HOME </a></li>
-              <li><a href="/objective" target="_blank"> OBJECTIVE </a></li>
+              <li><a href="/objectives" target="_blank"> OBJECTIVE </a></li>
               <li><a href="/authors">AUTHOR/S </a></li>
               <li><a href="/contact">CONTACT </a></li>
               <li><a href="/appreciation">APPRECIATION </a></li>
